--- a/prototipo1Codesign/styles/style.css
+++ b/prototipo1Codesign/styles/style.css
@@ -2,7 +2,7 @@
     margin: 0;
 }
 
-body {
+main {
     margin: auto;
     width: 80vw;
 }
@@ -24,16 +24,17 @@ a:visited {
 }
 
 .global-nav {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.2);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100vw;
-    margin-left: -10vw;
+    /* width: 100vw; */
+    /* margin-left: -10vw; */
 }
 
 .logo-content {
-    padding: 1vw;
+    padding-top: 1vw;
+    padding-bottom: 1vw;
     width: 5.2vw;
     height: 2.8vw;
     margin-left: 10vw;
