--- a/prototipo1Codesign/styles/projects.css
+++ b/prototipo1Codesign/styles/projects.css
@@ -1,12 +1,5 @@
-<<<<<<< Updated upstream
 body {
     background-color:#dddddd;
-=======
-html {
-    background: linear-gradient(180deg, #1F2444 32.81%, #2E265F 64.06%, #3E2F4D 100%);
-    background-size: 100vw 100vw;
-    background-repeat: no-repeat;
->>>>>>> Stashed changes
 }
 
 h1 {
@@ -14,10 +7,6 @@ h1 {
     font-size: 4.42vw;
     font-weight: bold;
     margin-top: 2.96vw;
-<<<<<<< Updated upstream
-=======
-    color: white;
->>>>>>> Stashed changes
 }
 
 #character-content {
@@ -78,13 +67,12 @@ h1 {
     margin-right: 1.66vw;
     width: 18.75vw;
     font-family: 'Fredoka', sans-serif;
-    color: white;
 }
 
 .item-menu:hover {
     margin-top: -0.5vw;
     font-weight: bold;
-    border-bottom: 4px solid  white;
+    border-bottom: 4px solid #000000;
 }
 
 main {
@@ -95,11 +83,11 @@ main {
 }
 
 .content {
-    margin-top: 3.43vw;
+    margin-top: 1.5vw;
     display: grid;
     grid-template-columns: 18.75vw 18.75vw 18.75vw 18.75vw;
     grid-column-gap: 1.66vw;
-    grid-row-gap: 1.66vw;
+    grid-row-gap: 3.43vw;
     margin-bottom: 3.33vw;
 }
 
@@ -108,25 +96,17 @@ main {
     height: 25vw;
     background-color: white;
     border-radius: 1.25vw;
-    box-shadow: 0px 3px 6px rgba(255, 255, 255, 0.2);
 }
 
 .card-project:hover {
-    border: 0.2vw solid white;
+    border: 0.2vw solid #000000;
 }
 
-/* #card-img {
-    padding-top: 0.5vw;
-    padding-left: 0.5vw;
-    padding-right:0.5vw;
-} */
-
-#card-img>iframe {
+#card-img>img {
     width: 100%;
     height: 100%;
     border-top-left-radius: 1.25vw;
     border-top-right-radius: 1.25vw;
-    overflow: hidden;
 }
 
 #card-text {
