--- a/prototipo1Codesign/views/trails.html
+++ b/prototipo1Codesign/views/trails.html
@@ -35,7 +35,7 @@
   </header>
   <div class="gridtrilhas">
     <div id="corujatrilhas">
-      <img src="../source/corujatrilhas.png">
+      <img src="../source/coruja padrao.png">
     </div>
     <div id="balaotrilhas">
       <img src="../source/balaotrilhas.png">
@@ -45,8 +45,22 @@
       <p id="select">Selecione algum desses itens</p>
     </div>
   </div>
+  <div class="gridsistemas">
+    <div id="corujatrilhas">
+      <img src="../source/coruja prog.png">
+    </div>
+    <div id="balaotrilhas">
+      <img src="../source/balaotrilhas.png">
+      <h1>SISTEMAS!</h1>
+      <p>Então, sobre a trilha de sistemas...</p>
+    </div>
+    <div id="trilhasistemas">
+      <img src="../source/trilhasistemas.png">
+     </div>
+  </div>
 
-  <script src="../script.js"></script>
+
+  <script src="../trails.js"></script>
 </body>
 
 </html>
