reposicionando balao de texto

--- a/prototipo1Codesign/styles/home.css
+++ b/prototipo1Codesign/styles/home.css
@@ -234,6 +234,11 @@ align-items: center;*/
     margin-bottom: 2.7vw;
 }
 
+#sapocol10row31 > .ellipsis-text{
+    margin-left: 7.9vw;
+    margin-bottom: 4.3vw;
+}
+
 
 
 
