--- a/prototipo1Codesign/styles/projects.css
+++ b/prototipo1Codesign/styles/projects.css
@@ -1,7 +1,15 @@
-body {
-    
-        background-color: #dddddd;
-      
+body { 
+    background: linear-gradient(180deg, #1f2444 28.13%, #2e265f 72.4%, #3e2f4d 94.79%);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+
+p {
+    color: black;
+}
+
+li, h1 {
+    color: white;
 }
 
 h1 {
@@ -9,10 +17,6 @@ h1 {
     font-size: 4.42vw;
     font-weight: bold;
     margin-top: 2.96vw;
-}
-
-a{
-    color: #FFFFFF;
 }
 
 #character-content {
@@ -58,27 +62,35 @@ a{
 }
 
 #menu {
+    padding: 0;
     margin-top: 3.6vw;
-    margin-left: -2.2vw;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     list-style: none;
     font-size: 1.3vw;
+    border-bottom: 0.2vw solid #ffffff23;
 }
 
 .item-menu {
     padding-bottom: 0.5vw;
     text-align: center;
-    margin-right: 1.66vw;
-    width: 18.75vw;
+    /* margin-right: 1.66vw; */
+    width: 20vw;
+    list-style: none;
     font-family: 'Fredoka', sans-serif;
 }
 
-.item-menu:hover {
-    margin-top: -0.5vw;
+.selected {
+    margin-top: -0.2vw;
     font-weight: bold;
-    border-bottom: 4px solid #000000;
+    transition: border-bottom 0.15s ease;
+    border-bottom: 0.2vw solid #FFFFFF;
+}
+
+.item-menu:hover {
+    margin-top: -0.2vw;
+    font-weight: bold;
 }
 
 main {
@@ -89,11 +101,11 @@ main {
 }
 
 .content {
-    margin-top: 1.5vw;
+    margin-top: 3vw;
     display: grid;
     grid-template-columns: 18.75vw 18.75vw 18.75vw 18.75vw;
     grid-column-gap: 1.66vw;
-    grid-row-gap: 3.43vw;
+    grid-row-gap:1.66vw;
     margin-bottom: 3.33vw;
 }
 
@@ -105,7 +117,7 @@ main {
 }
 
 .card-project:hover {
-    border: 0.2vw solid #000000;
+    border: 0.2vw solid white;
 }
 
 #card-img>img {
@@ -122,10 +134,12 @@ main {
 #card-text h4 {
     font-size:1.1vw;
     margin: 0;
+    color: black;
 }
 
 #card-text p {
     width: 100%;
     height: 100%;
     font-size: 1.1vw;
+    color: black;
 }
