--- a/prototipo1Codesign/styles/style.css
+++ b/prototipo1Codesign/styles/style.css
@@ -24,12 +24,11 @@ a:visited {
 }
 
 .global-nav {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(32, 32, 32, 0.3);
+    background-blend-mode: multiply;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* width: 100vw; */
-    /* margin-left: -10vw; */
 }
 
 .logo-content {
@@ -56,13 +55,13 @@ a:visited {
     margin-left: 3.38vw;
     list-style: none;
     color: white;
-    font-size: larger;
+    font-size: 1.67vw;
     text-decoration: none;
     position: relative;
 }
 
 .global-menu-item a {
-    font-family: 'Staatliches', cursive;
+    font-family: 'Rubik', sans-serif;
 }
 
 .global-menu-item::after { /* bolinha */
@@ -72,7 +71,7 @@ a:visited {
     height: 0.4vw;
     background-color: transparent;
     position: absolute;
-    bottom: -0.26vw;
+    /* bottom: -0.26vw; */
     left: 50%;
     transform: translateX(-50%);
     border-radius: 50%;
